syntax = "proto3";

option csharp_namespace = "UserAPI.Grpc";

package UserAPIGrpc;

service UserGrpcService {
  rpc GetUserById(GetUserByIdProtoDto) returns (GetUserResultResponse);
  rpc GetUserByIdentity(GetUserByIdentityProtoDto) returns (GetUserResultResponse);
}

message GetUserByIdProtoDto {
  string user_id = 1;
}
message GetUserByIdentityProtoDto {
  string user_identity = 1;
}
message GetUserResultResponse {
  bool success = 1;
  string user_id = 2;
  string username = 3;
  string email_address = 4;
  string phone_number = 5;
  string error_message = 6;
}

service SecretGrpcProxyService {
  rpc VerifyPassKey(VerifyPassKeyRequest) returns (VerifyPassKeyResponse);
  rpc VerifyTwoFactorPin(VerifyTwoFactorPinRequest) returns (VerifyTwoFactorPinResponse);
}
message VerifyPassKeyRequest {
  string user_id = 1;
  string pending_verify_credential = 2;
}
message VerifyPassKeyResponse {
  bool success = 1;
  string error_message = 2;
}
message VerifyTwoFactorPinRequest {
  string user_id = 1;
  string two_factor_pin = 2;
}
message VerifyTwoFactorPinResponse {
  bool success = 1;
  string error_message = 2;
}
